--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@prisma/client": "^5.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "next": "14.1.0",
     "react": "^18",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0"
   }
 }
