--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "chart.js": "^4.4.2",
     "next": "14.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "use-debounce": "^10.0.0"
