--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@prisma/client": "^5.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
+    "mime": "^4.0.1",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "use-debounce": "^10.0.0",
