--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "sass": "^1.75.0",
+    "sweetalert2": "^11.10.8",
     "tailwind-merge": "^2.2.1",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
