--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "mime": "^4.0.1",
     "moment": "^2.30.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
