--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
+    "health-fitness": "file:",
     "mime": "^4.0.1",
     "moment": "^2.30.1",
     "next": "14.1.0",
