--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "health-fitness": "file:",
+    "lightgallery": "^2.7.2",
     "mime": "^4.0.1",
     "moment": "^2.30.1",
     "next": "14.1.0",
@@ -26,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
     "sass": "^1.75.0",
     "sweetalert2": "^11.10.8",
     "tailwind-merge": "^2.2.1",
