--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "health-fitness": "file:",
+    "jose": "^5.8.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lightgallery": "^2.7.2",
     "mime": "^4.0.1",
     "moment": "^2.30.1",
-    "next": "14.1.0",
+    "next": "^14.2.9",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "sass": "^1.75.0",
     "sweetalert2": "^11.10.8",
